Initial raceline support

--- a/torcs/torcs/src/tools/trackgen/Makefile
+++ b/torcs/torcs/src/tools/trackgen/Makefile
@@ -27,7 +27,7 @@ DATADIR      	= tools/trackgen
 
 DATA         	= trackgen.xml
 
-SOURCES      	= maintrackgen.cpp track.cpp easymesh.cpp ../../linux/linuxspec.cpp relief.cpp elevation.cpp objects.cpp ac3d.cpp util.cpp
+SOURCES      	= maintrackgen.cpp track.cpp easymesh.cpp ../../linux/linuxspec.cpp relief.cpp elevation.cpp objects.cpp ac3d.cpp util.cpp raceline.cpp
 
 SOLIBS       	= -ltgf -ltgfclient -lmusicplayer -lplibssg -lplibsg -lplibul -lrobottools -ltxml
 
