--- a/torcs/torcs/configure.in
+++ b/torcs/torcs/configure.in
@@ -17,7 +17,7 @@
 
 AC_INIT(Make-config.in)
 AC_CONFIG_HEADERS(config.h)
-AM_INIT_AUTOMAKE(torcs, 1.3.4-test2)
+AM_INIT_AUTOMAKE(torcs, 1.3.4)
 
 dnl Checks for programs.
 AC_PROG_CC
