Fixed dependency (problem just occurs on systems with liker option --as-needed set, e.g. ubuntu since 11.10).

--- a/torcs/torcs/src/libs/raceengineclient/Makefile
+++ b/torcs/torcs/src/libs/raceengineclient/Makefile
@@ -23,6 +23,8 @@ SOLIBDIR     = .
 SOURCES      = singleplayer.cpp raceinit.cpp racemain.cpp racemanmenu.cpp racestate.cpp racegl.cpp \
 	       raceengine.cpp raceresults.cpp
 
+SOLIBS      = -lracescreens -lrobottools
+
 EXPDIR       = include
 
 EXPORTS      = singleplayer.h raceinit.h
