Initial car setup screen, work in progress

--- a/torcs/torcs/src/libs/client/client.vcproj
+++ b/torcs/torcs/src/libs/client/client.vcproj
@@ -230,6 +230,10 @@
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
 			<File
+				RelativePath="..\racescreens\carsetupscreen.cpp"
+				>
+			</File>
+			<File
 				RelativePath="client.def"
 				>
 				<FileConfiguration
