--- a/torcs/torcs/src/libs/client/client.vcproj
+++ b/torcs/torcs/src/libs/client/client.vcproj
@@ -1349,6 +1349,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\racescreens\racescreens.h"
+				>
+			</File>
+			<File
 				RelativePath="splash.h"
 				>
 			</File>
