Added header file to project

--- a/torcs/torcs/src/modules/graphic/ssggraph/ssggraphlib.vcproj
+++ b/torcs/torcs/src/modules/graphic/ssggraph/ssggraphlib.vcproj
@@ -689,6 +689,10 @@
 			Filter="h;hpp;hxx;hm;inl"
 			>
 			<File
+				RelativePath="..\..\..\interfaces\graphic.h"
+				>
+			</File>
+			<File
 				RelativePath="grboard.h"
 				>
 			</File>
