--- a/torcs/torcs/src/doc/torcsdoc.conf
+++ b/torcs/torcs/src/doc/torcsdoc.conf
@@ -764,7 +764,7 @@ EXAMPLE_RECURSIVE      = NO
 # directories that contain image that are included in the documentation (see
 # the \image command).
 
-IMAGE_PATH             = doc/manual/img
+IMAGE_PATH             = src/doc/images
 
 # The INPUT_FILTER tag can be used to specify a program that doxygen should
 # invoke to filter for each input file. Doxygen will invoke the filter program
