Taking into account environment temperature/pressure

--- a/torcs/torcs/src/modules/simu/simuv2/simuv2.vcproj
+++ b/torcs/torcs/src/modules/simu/simuv2/simuv2.vcproj
@@ -256,6 +256,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\atmosphere.cpp"
+				>
+			</File>
+			<File
 				RelativePath="axle.cpp"
 				>
 				<FileConfiguration
